--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/OutpatientClinic.Presentation.csproj
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/OutpatientClinic.Presentation.csproj
@@ -6,4 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="8.1.1" />
+    <PackageReference Include="FluentAssertions.Json" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OutpatientClinic.Business\OutpatientClinic.Business.csproj" />
+    <ProjectReference Include="..\OutpatientClinic.Core\OutpatientClinic.Core.csproj" />
+    <ProjectReference Include="..\OutpatientClinic.DataAccess\OutpatientClinic.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
