--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.json
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-NAUIN65\\DEPIR2_2024;Initial Catalog=OutpatientClinic;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
+
