Identity and JWT, Token stablished, next steps Login and register models will be stsblished and modified

--- a/OutpatientClinicSolution/OutpatientClinic.Business/OutpatientClinic.Business.csproj
+++ b/OutpatientClinicSolution/OutpatientClinic.Business/OutpatientClinic.Business.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OutpatientClinic.DataAccess\OutpatientClinic.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
