--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/OutpatientClinic.Presentation.csproj
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/OutpatientClinic.Presentation.csproj
@@ -9,6 +9,14 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="8.1.1" />
     <PackageReference Include="FluentAssertions.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.6.1" />
   </ItemGroup>
 
   <ItemGroup>
