--- a/OutpatientClinicSolution/OutpatientClinic.Business/OutpatientClinic.Business.csproj
+++ b/OutpatientClinicSolution/OutpatientClinic.Business/OutpatientClinic.Business.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OutpatientClinic.Core\OutpatientClinic.Core.csproj" />
     <ProjectReference Include="..\OutpatientClinic.DataAccess\OutpatientClinic.DataAccess.csproj" />
   </ItemGroup>
 
