Service Layer stablished and integrated in Service Scope Program.cs "Magdy Elshrief/ Mohamed Hassan"

--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.json
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-NAUIN65\\DEPIR2_2024;Initial Catalog=OutpatientClinic_Final;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OutpatientClinicDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
 
