--- a/OutpatientClinicSolution/OutpatientClinic.Core/OutpatientClinic.Core.csproj
+++ b/OutpatientClinicSolution/OutpatientClinic.Core/OutpatientClinic.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OutpatientClinic.DataAccess\OutpatientClinic.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
