--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.json
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OutpatientClinicDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Jwt": {
+    "Secret": "YourSuperSecretKeyThatIsVeryLongAndComplex",
+    "Issuer": "OutpatientClinicIssuer",
+    "Audience": "OutpatientClinicAudience",
+    "ExpirationMinutes": 120
   }
 }
 
