--- a/OutpatientClinicSolution/OutpatientClinic.Business/OutpatientClinic.Business.csproj
+++ b/OutpatientClinicSolution/OutpatientClinic.Business/OutpatientClinic.Business.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OutpatientClinic.Core\OutpatientClinic.Core.csproj" />
     <ProjectReference Include="..\OutpatientClinic.DataAccess\OutpatientClinic.DataAccess.csproj" />
   </ItemGroup>
