--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.Development.json
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OutpatientClinicDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=localhost,1433;Database=OutpatientClinicDB;User Id=sa;Password=Arh0u926@#$;TrustServerCertificate=True;"
   }
 }
